--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div id="footer">
             <div id="footer-content">
-                <span>Atlikums: 300€</span>
+                <span>Atlikums: <span id="balance"></span>€</span>
                 <button>Kā tas strādā?</button>
             </div>
         </div>
