Delete system done. Added some new features. Help button started

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div class="title">
                     <img src="static/vectors/plus.svg">
                     <span>Ienākumi</span>
+                    <span class="title-sum">+<span class="sum"></span>€</span>
                 </div>
                 <div class="drop-down-income">
                 </div>
@@ -27,6 +28,7 @@
                 <div class="title">
                     <img src="static/vectors/plus.svg">
                     <span>Izdevumi</span>
+                    <span class="title-sum">-<span class="sum"></span>€</span>
                 </div>
                 <div class="drop-down-expenses">
                 </div>
@@ -35,6 +37,7 @@
                 <div class="title">
                     <img src="static/vectors/plus.svg">
                     <span>Nenopirku</span>
+                    <span class="title-sum">+<span class="sum"></span>€</span>
                 </div>
                 <div class="drop-down-didnt-buy-it">
                 </div>
