--- a/index.html
+++ b/index.html
@@ -42,6 +42,28 @@
                 <div class="drop-down-didnt-buy-it">
                 </div>
             </div>
+            <div id="instructions">
+                <span id="instruction-close-button"><img src="static/vectors/cross.svg" width="30px"></span>
+                <h2>Kas šis vispār ir?</h2>
+                <p>Šī ir aplikācija kas ļau atsekot visus savus ienākumus un izdevumus.</p>
+                <h2>Kam man to vajaga?</h2>
+                <p>Šī aplikācija noder tiem cilvēkiem kuri grib sākt izsekot savus ienākumus un izdevumus vai sākt ekonomēt. Katra
+                    mēneša beigās var un vajaga apskatīt savus ienākumus un izdevumus un izsecināt kur vajadzētu tommēr sākt ekonomēt.
+                </p>
+                <h2>Kas ir lauks "Ienākumi"?</h2>
+                <p>Šeit vajaga pierakstīt visus savus ienākumus.</p>
+                <h2>Kas ir ienākumi?</h2>
+                <p>Ienākumi ir tad kad Jūs iegustat naudu, piemēram mamma iedod vai saņemiet darbā algu.</p>
+                <h2>Kas ir lauks "Izdevumi"?</h2>
+                <p>Šeit vajaga pierakstīt visus savus izdevumus.</p>
+                <h2>Kas ir izdevumi?</h2>
+                <p>Izdevumi ir tad kad tu kaut kur iztērē naudu no ienākumiem, piemēram mammai puķes nopērciet, brauciet ar taksi vai
+                    nopērciet produktus.</p>
+                <h2>Kas ir lauks "Nenopirku"?</h2>
+                <p>Šeit vajaga rakstīt par to ko Jūs neēsat pārliecināti, pirkt vai nepirkt. Ja Jūs to nenopērkat tad rakstiet to šeit.
+                    Mēneša beigās varēsiet apskatīt cik Jūs daudz naudas esat ietaupījuši kaut ko vienkārši nenopērkot.</p>
+
+            </div>
         </div>
         <div id="footer">
             <div id="footer-content">
